Added watermark code mean density + channel parameters; update Makefiles to create Debug/Release builds

--- a/Turbo Codes/Makefile
+++ b/Turbo Codes/Makefile
@@ -1,9 +1,9 @@
 # All compiling, linking, and library flags are imported
 
 SOURCES := $(wildcard Source/*.cpp)
-TARGETS := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%)
 OBJECTS := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%.o)
 DEPEND := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%.d)
+TARGETS := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%)
 
 # Master targets
 
@@ -22,16 +22,16 @@ $(BUILDDIR):
 # Pattern-matched targets
 
 $(TARGETS):	%:	%.o $(LIBS)
-	@echo "Linking $*."
+	@echo "Linking $* [$(RELEASE)]"
 	@$(LD) $(LDflags) -o $@ $< $(LDlibs)
 
 $(BUILDDIR)/%.o:	Source/%.cpp
-	@echo "Compiling $<."
+	@echo "Compiling $< [$(RELEASE)]"
 	@$(CC) $(CCflags) -c $< -o $@
 
 $(BUILDDIR)/%.d:	Source/%.cpp
 	@$(MKDIR) $(BUILDDIR)
-	@echo "Making dependancy list for $*.o"
+	@echo "Making dependancy list for $*.o [$(RELEASE)]"
 	@$(CC) $(CCflags) $(CCdepend) $< | gawk 'BEGIN { FS = "$*.o" } { if( NF > 1 ) { print $$1, "$(BUILDDIR)/$*.d $(BUILDDIR)/$*.o", $$2 } else { print $$0 } }' > $@
 
 include $(DEPEND)
