--- a/Libraries/Libcomm/Makefile
+++ b/Libraries/Libcomm/Makefile
@@ -1,10 +1,9 @@
 # All compiling, linking, and library flags are imported
 
-LIBRARY := $(BUILDDIR)/libcomm.a
-
 SOURCES := $(wildcard Source/*.cpp)
 OBJECTS := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%.o)
 DEPEND := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%.d)
+LIBRARY := $(BUILDDIR)/libcomm.a
 
 # Master targets
 
@@ -21,19 +20,19 @@ $(BUILDDIR):
 	@$(MKDIR) $(BUILDDIR)
 
 $(LIBRARY):	$(OBJECTS)
-	@echo "Building library $*."
+	@echo "Building library $* [$(RELEASE)]"
 	@$(LIB) $(LIBflags) $(LIBRARY) $(OBJECTS)
 	@$(RAN) $(LIBRARY)
 
 # Pattern-matched targets
 
 $(BUILDDIR)/%.o:	Source/%.cpp
-	@echo "Compiling $<."
+	@echo "Compiling $< [$(RELEASE)]"
 	@$(CC) $(CCflags) -c $< -o $@
 
 $(BUILDDIR)/%.d:	Source/%.cpp
 	@$(MKDIR) $(BUILDDIR)
-	@echo "Making dependancy list for $*.o"
+	@echo "Making dependancy list for $*.o [$(RELEASE)]"
 	@$(CC) $(CCflags) $(CCdepend) $< | gawk 'BEGIN { FS = "$*.o" } { if( NF > 1 ) { print $$1, "$(BUILDDIR)/$*.d $(BUILDDIR)/$*.o", $$2 } else { print $$0 } }' > $@
 
 include $(DEPEND)
