Created a new class for controller-canonical binary FSMs This contains common elements from nrcc and rscc

--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -325,6 +325,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ccbfsm.cpp"
+				>
+			</File>
+			<File
 				RelativePath="Source\channel.cpp"
 				>
 				<FileConfiguration
@@ -1255,6 +1259,10 @@
 			</File>
 			<File
 				RelativePath=".\Source\bsid.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ccbfsm.h"
 				>
 			</File>
 			<File
