Updated project browse information settings

--- a/Libraries/Libbase/LibBase.vcproj
+++ b/Libraries/Libbase/LibBase.vcproj
@@ -51,7 +51,8 @@
 				AssemblerListingLocation=""
 				ObjectFile="$(IntDir)\"
 				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
-				BrowseInformation="1"
+				BrowseInformation="0"
+				BrowseInformationFile=""
 				WarningLevel="3"
 				WarnAsError="true"
 				SuppressStartupBanner="true"
@@ -129,7 +130,8 @@
 				AssemblerListingLocation=""
 				ObjectFile="$(IntDir)\"
 				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
-				BrowseInformation="1"
+				BrowseInformation="0"
+				BrowseInformationFile=""
 				WarningLevel="3"
 				WarnAsError="true"
 				SuppressStartupBanner="true"
