--- a/Turbo Codes/SimCommsys/SimCommsys.vcproj
+++ b/Turbo Codes/SimCommsys/SimCommsys.vcproj
@@ -55,6 +55,8 @@
 				AssemblerListingLocation=""
 				ObjectFile="$(IntDir)\"
 				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
+				BrowseInformation="0"
+				BrowseInformationFile=""
 				WarningLevel="3"
 				WarnAsError="true"
 				SuppressStartupBanner="true"
@@ -146,6 +148,8 @@
 				AssemblerListingLocation=""
 				ObjectFile="$(IntDir)\"
 				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
+				BrowseInformation="0"
+				BrowseInformationFile=""
 				WarningLevel="3"
 				WarnAsError="true"
 				SuppressStartupBanner="true"
