--- a/Turbo Codes/SimulateCommsys/SimulateCommsys.vcproj
+++ b/Turbo Codes/SimulateCommsys/SimulateCommsys.vcproj
@@ -60,7 +60,8 @@
 				AssemblerListingLocation=""
 				ObjectFile="$(IntDir)\"
 				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
-				BrowseInformation="1"
+				BrowseInformation="0"
+				BrowseInformationFile=""
 				WarningLevel="3"
 				WarnAsError="true"
 				SuppressStartupBanner="true"
@@ -161,7 +162,8 @@
 				AssemblerListingLocation=""
 				ObjectFile="$(IntDir)\"
 				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
-				BrowseInformation="1"
+				BrowseInformation="0"
+				BrowseInformationFile=""
 				WarningLevel="3"
 				WarnAsError="true"
 				SuppressStartupBanner="true"
