--- a/Turbo Codes/TestConfig/TestConfig.vcproj
+++ b/Turbo Codes/TestConfig/TestConfig.vcproj
@@ -46,6 +46,8 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
+				BrowseInformation="0"
+				BrowseInformationFile=""
 				WarningLevel="3"
 				WarnAsError="true"
 				Detect64BitPortabilityProblems="true"
@@ -123,6 +125,8 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
+				BrowseInformation="0"
+				BrowseInformationFile=""
 				WarningLevel="3"
 				WarnAsError="true"
 				Detect64BitPortabilityProblems="true"
