--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -331,6 +331,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\ccfsm.cpp"
+				>
+			</File>
+			<File
 				RelativePath="Source\channel.cpp"
 				>
 				<FileConfiguration
@@ -1265,6 +1269,10 @@
 			</File>
 			<File
 				RelativePath=".\Source\ccbfsm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\ccfsm.h"
 				>
 			</File>
 			<File
