--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -579,6 +579,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\Source\grscc.cpp"
+				>
+			</File>
+			<File
 				RelativePath="Source\helical.cpp"
 				>
 				<FileConfiguration
@@ -1325,6 +1329,10 @@
 			</File>
 			<File
 				RelativePath="Source\fsm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\grscc.h"
 				>
 			</File>
 			<File
