--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -579,6 +579,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\Source\gnrcc.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\grscc.cpp"
 				>
 			</File>
@@ -1329,6 +1333,10 @@
 			</File>
 			<File
 				RelativePath="Source\fsm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\gnrcc.h"
 				>
 			</File>
 			<File
