Cleaned up Histogram2D - trying to find a bug in user message passing

--- a/Libraries/Libwin/LibWin.vcproj
+++ b/Libraries/Libwin/LibWin.vcproj
@@ -480,5 +480,9 @@
 		</Filter>
 	</Files>
 	<Globals>
+		<Global
+			Name="RESOURCE_FILE"
+			Value="\Programming\Turbo Codes\AnalyseInterleaver\AnalyseInterleaver.rc"
+		/>
 	</Globals>
 </VisualStudioProject>
