--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -971,6 +971,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\Source\qam.cpp"
+				>
+			</File>
+			<File
 				RelativePath="Source\rand_lut.cpp"
 				>
 				<FileConfiguration
@@ -1421,6 +1425,10 @@
 			</File>
 			<File
 				RelativePath="Source\puncture_stipple.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\qam.h"
 				>
 			</File>
 			<File
