Experimented with performance explorer

--- a/Turbo Codes/SRandomInterleaver/SRandomInterleaver.vcproj
+++ b/Turbo Codes/SRandomInterleaver/SRandomInterleaver.vcproj
@@ -88,6 +88,7 @@
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
 				SubSystem="2"
 				TargetMachine="1"
+				Profile="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -190,6 +191,7 @@
 				ProgramDatabaseFile="$(TargetDir)$(TargetName).pdb"
 				SubSystem="2"
 				TargetMachine="1"
+				Profile="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
