Changed build process to build locally and then copy only on install

--- a/Turbo Codes/Makefile
+++ b/Turbo Codes/Makefile
@@ -3,17 +3,19 @@
 SOURCES := $(wildcard Source/*.cpp)
 OBJECTS := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%.o)
 DEPEND := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%.d)
-TARGETS := $(SOURCES:Source/%.cpp=$(BINDIR)/%.$(RELEASE))
+TARGETS := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%)
+FINAL := $(SOURCES:Source/%.cpp=$(BINDIR)/%.$(RELEASE))
 
 # Master targets
 
-.PHONY:	clean clean-dist clean-depend
+.PHONY:	all install clean
 
-all:	$(BUILDDIR) $(BINDIR) $(TARGETS)
+all:	$(TARGETS) $(BUILDDIR)
+
+install: $(FINAL) $(BINDIR)
 
 clean:
 	$(RM) $(BUILDDIR)
-	$(RM) $(BINDIR)/*.$(RELEASE)
 
 # Manual targets
 
@@ -25,16 +27,19 @@ $(BINDIR):
 
 # Pattern-matched targets
 
-$(BINDIR)/%.$(RELEASE):	$(BUILDDIR)/%.o $(LIBS)
+$(BINDIR)/%.$(RELEASE):	$(BUILDDIR)/% $(BINDIR)
+	@echo "Installing $* [$(RELEASE)]"
+	@$(CP) $< $@
+
+$(BUILDDIR)/%:	$(BUILDDIR)/%.o $(BUILDDIR) $(LIBS)
 	@echo "Linking $* [$(RELEASE)]"
 	@$(LD) $(LDflags) -o $@ $< $(LDlibs)
 
-$(BUILDDIR)/%.o:	Source/%.cpp
+$(BUILDDIR)/%.o:	Source/%.cpp $(BUILDDIR)
 	@echo "Compiling $< [$(RELEASE)]"
 	@$(CC) $(CCflags) -c $< -o $@
 
-$(BUILDDIR)/%.d:	Source/%.cpp
-	@$(MKDIR) $(BUILDDIR)
+$(BUILDDIR)/%.d:	Source/%.cpp $(BUILDDIR)
 	@echo "Making dependancy list for $*.o [$(RELEASE)]"
 	@$(CC) $(CCflags) $(CCdepend) $< | gawk 'BEGIN { FS = "$*.o" } { if( NF > 1 ) { print $$1, "$(BUILDDIR)/$*.d $(BUILDDIR)/$*.o", $$2 } else { print $$0 } }' > $@
 
