--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -399,44 +399,12 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="Source\commsys_bitprofiler.cpp"
+				RelativePath=".\Source\commsys_hist_symerr.cpp"
 				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="Source\commsys_profiler.cpp"
+				RelativePath=".\Source\commsys_prof_pos.cpp"
 				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="Source\crypt.cpp"
@@ -1316,11 +1284,11 @@
 				>
 			</File>
 			<File
-				RelativePath="Source\commsys_bitprofiler.h"
+				RelativePath=".\Source\commsys_hist_symerr.h"
 				>
 			</File>
 			<File
-				RelativePath="Source\commsys_profiler.h"
+				RelativePath=".\Source\commsys_prof_pos.h"
 				>
 			</File>
 			<File
